# doublePendulumJaxRL

./: .gitignore  README.md  pyproject.toml
checkpoints/: both.pkl  bottom.pkl  top.pkl
double_pendulum_jaxrl/: __init__.py  config.py  dynamics.py  env.py  evaluate.py  train.py  visualize.py
scripts/: benchmark.py  play.py  train.py
tests/: test_dynamics.py  test_env.py
